# aoc-template

./: Cargo.toml  README.md
src/: main.rs  part1.rs  part2.rs
